feat(users): add avatar placeholder

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -39,6 +39,7 @@
     "EDIT": "Edit",
     "DELETE": "Delete",
     "NAME": "Name",
+    "AVATAR": "Avatar",
     "USERS": "users",
     "USERS_TAB": "Users",
     "CANCEL": "Cancel"
