--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -39,6 +39,7 @@
     "EDIT": "Редактировать",
     "DELETE": "Удалить",
     "NAME": "Имя",
+    "AVATAR": "Аватар",
     "USERS": "пользователей",
     "USERS_TAB": "Пользователи",
     "CANCEL": "Отмена"
