feat(testcases): add tags to testcases

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -197,6 +197,9 @@
     "POSTCONDITIONS": "Postconditions",
     "POSTCONDITIONS_PLACEHOLDER": "Postconditions",
     "POSTCONDITIONS_REQUIRED": "Postconditions required",
+    "ORDER": "Order",
+    "TAGS": "Tags",
+    "TAGS_PLACEHOLDER": "tag",
     "CREATE_TESTCASE": "Create Test Case",
     "EDIT_TESTCASE": "Edit Test Case",
     "CREATE_BUTTON": "Create",
