--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -197,6 +197,9 @@
     "POSTCONDITIONS": "Постусловия",
     "POSTCONDITIONS_PLACEHOLDER": "Постусловия",
     "POSTCONDITIONS_REQUIRED": "Постусловия - обязательное поле",
+    "ORDER": "Порядок",
+    "TAGS": "Теги",
+    "TAGS_PLACEHOLDER": "тег",
     "CREATE_TESTCASE": "Создать Тест кейс",
     "EDIT_TESTCASE": "Редактировать Тест кейс",
     "CREATE_BUTTON": "Создать",
