--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -40,6 +40,8 @@
     "DELETE": "Удалить",
     "NAME": "Имя",
     "AVATAR": "Аватар",
+    "ACTIVE": "Активирован",
+    "CREATED": "Дата регистрации",
     "USERS": "пользователей",
     "USERS_TAB": "Пользователи",
     "CANCEL": "Отмена"
