feat(testcases): add tags to test cases list

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -142,6 +142,7 @@
     "EDIT": "Edit",
     "DELETE": "Delete",
     "TITLE": "Title",
+    "TAGS": "Tags",
     "CANCEL": "Cancel",
     "TESTCASE": "Test Case",
     "TESTSUITE": "Test Suite",
