--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -142,6 +142,7 @@
     "EDIT": "Редактировать",
     "DELETE": "Удалить",
     "TITLE": "Название",
+    "TAGS": "Теги",
     "CANCEL": "Отмена",
     "TESTCASE": "Тест Кейс",
     "TESTSUITE": "Тестовый Набор",
