feat(i18n): rename avatar to photo

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -39,7 +39,7 @@
     "EDIT": "Edit",
     "DELETE": "Delete",
     "NAME": "Name",
-    "AVATAR": "Avatar",
+    "PHOTO": "Photo",
     "ACTIVE": "Active",
     "CREATED": "Created date",
     "USERS": "users",
