--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -39,7 +39,7 @@
     "EDIT": "Редактировать",
     "DELETE": "Удалить",
     "NAME": "Имя",
-    "AVATAR": "Аватар",
+    "PHOTO": "Фото",
     "ACTIVE": "Активирован",
     "CREATED": "Дата регистрации",
     "USERS": "пользователей",
