feat(testcases): introduce test case type for test cases list

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -147,6 +147,7 @@
     "DELETE": "Delete",
     "TITLE": "Title",
     "TAGS": "Tags",
+    "TYPE": "Type",
     "CANCEL": "Cancel",
     "TESTCASE": "Test Case",
     "TESTSUITE": "Test Suite",
