--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -147,6 +147,7 @@
     "DELETE": "Удалить",
     "TITLE": "Название",
     "TAGS": "Теги",
+    "TYPE": "Тип",
     "CANCEL": "Отмена",
     "TESTCASE": "Тест Кейс",
     "TESTSUITE": "Тестовый Набор",
