feat(testcases): add priority to test case list

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -145,6 +145,7 @@
     "ADD": "Add",
     "EDIT": "Edit",
     "DELETE": "Delete",
+    "PRIORITY": "Priority",
     "TITLE": "Title",
     "TAGS": "Tags",
     "TYPE": "Type",
