--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -145,6 +145,7 @@
     "ADD": "Добавить",
     "EDIT": "Редактировать",
     "DELETE": "Удалить",
+    "PRIORITY": "Приоритет",
     "TITLE": "Название",
     "TAGS": "Теги",
     "TYPE": "Тип",
