feat(testcases): add proper test case steps

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -196,6 +196,9 @@
     "PRECONDITIONS_PLACEHOLDER": "Preconditions",
     "PRECONDITIONS_REQUIRED": "Preconditions required",
     "STEPS": "Steps",
+    "ADD_STEP": "Add Step",
+    "STEPS_EMPTY_PLACEHOLDER": "We couldn't find any test steps!",
+    "STEPS_COUNT": "steps",
     "STEPS_ACTION_PLACEHOLDER": "Action",
     "STEPS_ACTION_REQUIRED": "Action required",
     "TESTDATA": "Test Data",
