--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -196,6 +196,9 @@
     "PRECONDITIONS_PLACEHOLDER": "Предусловия",
     "PRECONDITIONS_REQUIRED": "Предусловия - обязательное поле",
     "STEPS": "Шаги",
+    "ADD_STEP": "Добавить шаг",
+    "STEPS_EMPTY_PLACEHOLDER": "Тестовые шаги отсутствуют",
+    "STEPS_COUNT": "шагов",
     "STEPS_ACTION_PLACEHOLDER": "Действие",
     "STEPS_ACTION_REQUIRED": "Действие - обязательное поле",
     "TESTDATA": "Тестовые данные",
