--- a/i18n/en.json
+++ b/i18n/en.json
@@ -262,6 +262,14 @@
     "ADMIN_CANT_BE_EDITED": "System account can't be edited",
     "ADMIN_CANT_BE_DELETED": "System account can't be deleted"
   },
+  "DEVICECREATEPAGE": {
+    "TITLE": "Add Device to Inventory",
+    "MANUFACTURER": "Manufacturer",
+    "MANUFACTURER_PLACEHOLDER": "Manufacturer",
+    "MODEL": "Model",
+    "MODEL_PLACEHOLDER": "Model",
+    "TYPE": "Type"
+  },
   "USERPROFILEPAGE": {
     "USER": "User",
     "USER_PROFILE": "User profile",
