--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -124,7 +124,7 @@
     "EMPTYSTATE_CREATEPROJECT_BUTTON": "Создать Проект"
   },
   "PROJECTCREATEPAGE": {
-    "WIZARD_TITLE": "Мастер Создания Проекта",
+    "TITLE": "Создать Проект",
     "PROJECT_DETAILS": "Детали Проекта",
     "NAME": "Название",
     "DESCRIPTION": "Описание",
@@ -137,7 +137,9 @@
     "EDIT_MEMBERS": "Редактировать участников",
     "ROLE": "Роль",
     "ACTION": "Действие",
-    "REMOVE_MEMBER": "Удалить участника"
+    "REMOVE_MEMBER": "Удалить участника",
+    "MODAL_DELETE_HEADER": "Удалить Проект",
+    "MODAL_DELETE_DESCRIPTION": "Вы уверены, что хотите удалить выбранный проект? Удаленные проекты не смогут быть восстановлены."
   },
   "PROJECT_DETAILSPAGE": {
     "DESCRIPTION": "Описание",
