feat(testcase): introduce copy of selected testcase

--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -168,6 +168,7 @@
     "ADD": "Добавить",
     "EDIT": "Редактировать",
     "DELETE": "Удалить",
+    "COPY": "Копировать",
     "PRIORITY": "Приоритет",
     "TITLE": "Название",
     "TAGS": "Теги",
