--- a/i18n/en.json
+++ b/i18n/en.json
@@ -168,6 +168,7 @@
     "ADD": "Add",
     "EDIT": "Edit",
     "DELETE": "Delete",
+    "COPY": "Copy",
     "PRIORITY": "Priority",
     "TITLE": "Title",
     "TAGS": "Tags",
