--- a/i18n/en.json
+++ b/i18n/en.json
@@ -187,6 +187,7 @@
     "EMPTYSTATE_NOTESTSUITES_TITLE": "You have not created Test Suite yet.",
     "EMPTYSTATE_NOTESTSUITES_DESCRIPTION": "Tap the 'Create Test Suite' button to get started",
     "EMPTYSTATE_CREATETESTSUITE_BUTTON": "Create Test Suite",
+    "EMPTYSTATE_NOTESTCASES_TITLE": "You have not created Test Cases yet.",
     "STEP_ACTION": "Action",
     "TEST_DATA": "Test data",
     "EXPECTED_RESULT": "Expected result"
