refactor(ui): migrate to clr

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -27,7 +27,7 @@
   },
   "MAINSETTINGS": {
     "LANGUAGE": "Language",
-    "THEME": "Theme",
+    "THEME": "Night Mode",
     "THEME_BRIGHT": "Bright",
     "THEME_DARK": "Dark",
     "TITLE": "Settings"
