--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -27,7 +27,7 @@
   },
   "MAINSETTINGS": {
     "LANGUAGE": "Язык",
-    "THEME": "Тема",
+    "THEME": "Ночной режим",
     "THEME_BRIGHT": "Светлая",
     "THEME_DARK": "Темная",
     "TITLE": "Настройки"
